# codebase-doc-generator

./: .gitignore  .gitleaks.toml  README.md  main.py  pyproject.toml  requirements.txt
examples/: generated_README.md  generated_README_1.md  generated_README_2.md  generated_README_3.md  sample_output.md
src/: analyzer.py  generator.py  main.py
